--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -141,7 +141,7 @@
    ],
    "source": [
     "# Starting URL for Weather Map API Call.\n",
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
+    "url = \"\" + weather_api_key\n",
     "print(url)"
    ]
   },
