--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":50.2,\"feels_like\":48.2,\"temp_min\":47.14,\"temp_max\":52.43,\"pressure\":1013,\"humidity\":70},\"visibility\":10000,\"wind\":{\"speed\":8.05,\"deg\":220},\"clouds\":{\"all\":100},\"dt\":1649761333,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1649758078,\"sunset\":1649805696},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02d\"}],\"base\":\"stations\",\"main\":{\"temp\":66.92,\"feels_like\":65.34,\"temp_min\":59.11,\"temp_max\":70.18,\"pressure\":1013,\"humidity\":43},\"visibility\":10000,\"wind\":{\"speed\":17.27,\"deg\":270,\"gust\":21.85},\"clouds\":{\"all\":20},\"dt\":1649803331,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1649758078,\"sunset\":1649805696},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
      "execution_count": 11,
@@ -218,23 +218,23 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
+       " 'weather': [{'id': 801,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04d'}],\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 50.2,\n",
-       "  'feels_like': 48.2,\n",
-       "  'temp_min': 47.14,\n",
-       "  'temp_max': 52.43,\n",
+       " 'main': {'temp': 66.92,\n",
+       "  'feels_like': 65.34,\n",
+       "  'temp_min': 59.11,\n",
+       "  'temp_max': 70.18,\n",
        "  'pressure': 1013,\n",
-       "  'humidity': 70},\n",
+       "  'humidity': 43},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 8.05, 'deg': 220},\n",
-       " 'clouds': {'all': 100},\n",
-       " 'dt': 1649761333,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'wind': {'speed': 17.27, 'deg': 270, 'gust': 21.85},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1649803331,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
        "  'sunrise': 1649758078,\n",
        "  'sunset': 1649805696},\n",
@@ -288,23 +288,23 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
+       " 'weather': [{'id': 801,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04d'}],\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 50.23,\n",
-       "  'feels_like': 48.25,\n",
-       "  'temp_min': 47.14,\n",
-       "  'temp_max': 52.43,\n",
+       " 'main': {'temp': 66.92,\n",
+       "  'feels_like': 65.34,\n",
+       "  'temp_min': 59.11,\n",
+       "  'temp_max': 70.18,\n",
        "  'pressure': 1013,\n",
-       "  'humidity': 70},\n",
+       "  'humidity': 43},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 8.05, 'deg': 220},\n",
-       " 'clouds': {'all': 100},\n",
-       " 'dt': 1649761444,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'wind': {'speed': 17.27, 'deg': 270, 'gust': 21.85},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1649803331,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
        "  'sunrise': 1649758078,\n",
        "  'sunset': 1649805696},\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "0f56df19",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "'US'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,17 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a999582b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1649761444"
+       "1649803331"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "d8e9ae6e",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 52.43 70 100 8.05\n"
+      "42.3584 -71.0598 70.18 43 20 17.27\n"
      ]
     }
    ],
@@ -405,17 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "99fd0d9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-04-12 11:04:04'"
+       "'2022-04-12 22:42:11'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,16 +431,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ce17c92b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1649803540.003526"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b2e37db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'04/12/22'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e37db3",
+   "id": "2fdc0458",
    "metadata": {},
    "outputs": [],
    "source": []
