Completed travel itinerary map.

--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -151,7 +151,7 @@
    ],
    "source": [
     "# 1. Import the WeatherPy_Database.csv file. \n",
-    "city_data_df = pd.read_csv(\"Weather_Database/WeatherPy_Database.csv\")\n",
+    "city_data_df = pd.read_csv(\"../Weather_Database/WeatherPy_Database.csv\")\n",
     "city_data_df.head()"
    ]
   },
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is the minimum temperature you would like for your trip? 70\n",
+      "What is the minimum temperature you would like for your trip? 60\n",
       "What is the maximum temperature you would like for your trip? 90\n"
      ]
     }
@@ -197,16 +197,16 @@
     {
      "data": {
       "text/plain": [
-       "City_ID                254\n",
-       "City                   254\n",
-       "Country                253\n",
-       "Lat                    254\n",
-       "Lng                    254\n",
-       "Max Temp               254\n",
-       "Humidity               254\n",
-       "Cloudiness             254\n",
-       "Wind Speed             254\n",
-       "Current Description    254\n",
+       "City_ID                368\n",
+       "City                   368\n",
+       "Country                365\n",
+       "Lat                    368\n",
+       "Lng                    368\n",
+       "Max Temp               368\n",
+       "Humidity               368\n",
+       "Cloudiness             368\n",
+       "Wind Speed             368\n",
+       "Current Description    368\n",
        "dtype: int64"
       ]
      },
@@ -229,16 +229,16 @@
     {
      "data": {
       "text/plain": [
-       "City_ID                253\n",
-       "City                   253\n",
-       "Country                253\n",
-       "Lat                    253\n",
-       "Lng                    253\n",
-       "Max Temp               253\n",
-       "Humidity               253\n",
-       "Cloudiness             253\n",
-       "Wind Speed             253\n",
-       "Current Description    253\n",
+       "City_ID                365\n",
+       "City                   365\n",
+       "Country                365\n",
+       "Lat                    365\n",
+       "Lng                    365\n",
+       "Max Temp               365\n",
+       "Humidity               365\n",
+       "Cloudiness             365\n",
+       "Wind Speed             365\n",
+       "Current Description    365\n",
        "dtype: int64"
       ]
      },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "2fd00f1d",
    "metadata": {},
    "outputs": [
@@ -301,6 +301,26 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Awbari</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>68.29</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>26.5921</td>\n",
+       "      <td>12.7805</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Port Lincoln</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>64.94</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-34.7333</td>\n",
+       "      <td>135.8667</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Kapaa</td>\n",
        "      <td>US</td>\n",
@@ -328,6 +348,16 @@
        "      <td>light rain</td>\n",
        "      <td>-23.1203</td>\n",
        "      <td>-134.9692</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Bethel</td>\n",
+       "      <td>US</td>\n",
+       "      <td>64.49</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>41.3712</td>\n",
+       "      <td>-73.4140</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -360,67 +390,37 @@
        "      <td>-90.3518</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Kariba</td>\n",
-       "      <td>ZW</td>\n",
-       "      <td>74.14</td>\n",
-       "      <td>broken clouds</td>\n",
-       "      <td>-16.5167</td>\n",
-       "      <td>28.8000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Georgetown</td>\n",
-       "      <td>MY</td>\n",
-       "      <td>79.95</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>5.4112</td>\n",
-       "      <td>100.3354</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Sao Jose Da Coroa Grande</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>81.25</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-8.8978</td>\n",
-       "      <td>-35.1478</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        City Country  Max Temp Current Description      Lat  \\\n",
-       "3                 Butaritari      KI     81.30    scattered clouds   3.0707   \n",
-       "9                      Kapaa      US     80.58          few clouds  22.0752   \n",
-       "12                 Mount Isa      AU     74.97           clear sky -20.7333   \n",
-       "13                   Rikitea      PF     78.12          light rain -23.1203   \n",
-       "16                  Waingapu      ID     79.27          light rain  -9.6567   \n",
-       "24                   Itarema      BR     79.09       broken clouds  -2.9248   \n",
-       "26              Puerto Ayora      EC     80.56       broken clouds  -0.7393   \n",
-       "30                    Kariba      ZW     74.14       broken clouds -16.5167   \n",
-       "33                Georgetown      MY     79.95          few clouds   5.4112   \n",
-       "35  Sao Jose Da Coroa Grande      BR     81.25           clear sky  -8.8978   \n",
+       "            City Country  Max Temp Current Description      Lat       Lng  \\\n",
+       "3     Butaritari      KI     81.30    scattered clouds   3.0707  172.7902   \n",
+       "4         Awbari      LY     68.29           clear sky  26.5921   12.7805   \n",
+       "7   Port Lincoln      AU     64.94     overcast clouds -34.7333  135.8667   \n",
+       "9          Kapaa      US     80.58          few clouds  22.0752 -159.3190   \n",
+       "12     Mount Isa      AU     74.97           clear sky -20.7333  139.5000   \n",
+       "13       Rikitea      PF     78.12          light rain -23.1203 -134.9692   \n",
+       "15        Bethel      US     64.49          light rain  41.3712  -73.4140   \n",
+       "16      Waingapu      ID     79.27          light rain  -9.6567  120.2641   \n",
+       "24       Itarema      BR     79.09       broken clouds  -2.9248  -39.9167   \n",
+       "26  Puerto Ayora      EC     80.56       broken clouds  -0.7393  -90.3518   \n",
        "\n",
-       "         Lng Hotel Name  \n",
-       "3   172.7902       None  \n",
-       "9  -159.3190       None  \n",
-       "12  139.5000       None  \n",
-       "13 -134.9692       None  \n",
-       "16  120.2641       None  \n",
-       "24  -39.9167       None  \n",
-       "26  -90.3518       None  \n",
-       "30   28.8000       None  \n",
-       "33  100.3354       None  \n",
-       "35  -35.1478       None  "
+       "   Hotel Name  \n",
+       "3        None  \n",
+       "4        None  \n",
+       "7        None  \n",
+       "9        None  \n",
+       "12       None  \n",
+       "13       None  \n",
+       "15       None  \n",
+       "16       None  \n",
+       "24       None  \n",
+       "26       None  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "d2edda88",
    "metadata": {},
    "outputs": [
@@ -444,6 +444,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
@@ -508,6 +514,26 @@
        "      <td>Isles Sunset Lodge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Awbari</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>68.29</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>26.5921</td>\n",
+       "      <td>12.7805</td>\n",
+       "      <td>فندق أوباري</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Port Lincoln</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>64.94</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-34.7333</td>\n",
+       "      <td>135.8667</td>\n",
+       "      <td>Port Lincoln Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Kapaa</td>\n",
        "      <td>US</td>\n",
@@ -527,47 +553,27 @@
        "      <td>139.5000</td>\n",
        "      <td>ibis Styles Mt Isa Verona</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Rikitea</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>78.12</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-23.1203</td>\n",
-       "      <td>-134.9692</td>\n",
-       "      <td>People ThankYou</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Waingapu</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>79.27</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-9.6567</td>\n",
-       "      <td>120.2641</td>\n",
-       "      <td>Pondok Wisata Elim</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          City Country  Max Temp Current Description      Lat       Lng  \\\n",
-       "3   Butaritari      KI     81.30    scattered clouds   3.0707  172.7902   \n",
-       "9        Kapaa      US     80.58          few clouds  22.0752 -159.3190   \n",
-       "12   Mount Isa      AU     74.97           clear sky -20.7333  139.5000   \n",
-       "13     Rikitea      PF     78.12          light rain -23.1203 -134.9692   \n",
-       "16    Waingapu      ID     79.27          light rain  -9.6567  120.2641   \n",
+       "            City Country  Max Temp Current Description      Lat       Lng  \\\n",
+       "3     Butaritari      KI     81.30    scattered clouds   3.0707  172.7902   \n",
+       "4         Awbari      LY     68.29           clear sky  26.5921   12.7805   \n",
+       "7   Port Lincoln      AU     64.94     overcast clouds -34.7333  135.8667   \n",
+       "9          Kapaa      US     80.58          few clouds  22.0752 -159.3190   \n",
+       "12     Mount Isa      AU     74.97           clear sky -20.7333  139.5000   \n",
        "\n",
        "                             Hotel Name  \n",
        "3                    Isles Sunset Lodge  \n",
+       "4                           فندق أوباري  \n",
+       "7                    Port Lincoln Hotel  \n",
        "9   Sheraton Kauai Coconut Beach Resort  \n",
-       "12            ibis Styles Mt Isa Verona  \n",
-       "13                      People ThankYou  \n",
-       "16                   Pondok Wisata Elim  "
+       "12            ibis Styles Mt Isa Verona  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,24 +609,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "db9b5a22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "City                   253\n",
-       "Country                253\n",
-       "Max Temp               253\n",
-       "Current Description    253\n",
-       "Lat                    253\n",
-       "Lng                    253\n",
-       "Hotel Name             233\n",
+       "City                   365\n",
+       "Country                365\n",
+       "Max Temp               365\n",
+       "Current Description    365\n",
+       "Lat                    365\n",
+       "Lng                    365\n",
+       "Hotel Name             339\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,24 +638,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "bc7b2eec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "City                   233\n",
-       "Country                233\n",
-       "Max Temp               233\n",
-       "Current Description    233\n",
-       "Lat                    233\n",
-       "Lng                    233\n",
-       "Hotel Name             233\n",
+       "City                   339\n",
+       "Country                339\n",
+       "Max Temp               339\n",
+       "Current Description    339\n",
+       "Lat                    339\n",
+       "Lng                    339\n",
+       "Hotel Name             339\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,20 +668,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "668ca4e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8a. Create the output File (CSV)\n",
-    "output_data_file = \"Vacation_Search/WeatherPy_vacation.csv\"\n",
+    "output_data_file = \"WeatherPy_vacation.csv\"\n",
     "# 8b. Export the City_Data into a csv\n",
     "hotel_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "352ed676",
    "metadata": {},
    "outputs": [],
@@ -699,14 +705,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "a5b13649",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f7ef6e2071c45e38d2aa742a4e1ad7f",
+       "model_id": "adb982846c304b1ba2f4899d8676fa23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -727,14 +733,6 @@
     "# 11b. Display the figure\n",
     "fig"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8ec14bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
